<resources>
    <string name="app_name">Locky</string>
    <string name="app_description_short">Manage all your sensible data &amp; credential details on a single secure place.</string>
    <string name="app_developer_signature">Developed with \u2764\uFE0F in 🇲🇺</string>
    <string name="app_play_link" translatable="false">https://play.google.com/store/apps/details?id="%1$s"</string>
    <string name="app_play_package" translatable="false">com.android.vending</string>
    <string name="app_play_share">Hey, check out this nice password manager on: https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="app_contributor_lead_name" translatable="false">Mervin Hemaraju</string>
    <string name="app_contributor_lead_description">Lead Developer &amp; Designer</string>
    <string name="app_contributor_lead_url" translatable="false">https://www.linkedin.com/in/mervinh16/</string>
    <string name="app_contributor_graphic_name" translatable="false">Nick Foo Kune</string>
    <string name="app_contributor_graphic_description">Play Store Banner &amp; Images</string>
    <string name="app_contributor_graphic_url" translatable="false">https://www.linkedin.com/in/nick-foo-kune-175172128/</string>
    <string name="app_contributor_qa_name" translatable="false">Kirtee Joymungul</string>
    <string name="app_contributor_qa_description">Quality Assurance Tester</string>
    <string name="app_contributor_qa_url" translatable="false">https://www.linkedin.com/in/kirtee-joymungul-410156126/</string>
    <string name="app_support_email_team" translatable="false">locky.application@gmail.com</string>
    <string name="app_support_email_subject_feedback" translatable="false">Support :: Locky :: Feedback</string>
    <string name="app_support_email_subject_bug" translatable="false">Support :: Locky :: Bug Report</string>
    <string name="app_user_member_since">Member since "%1$s"</string>
    <string name="app_user_login">Login: "%1$s"</string>
    <string name="app_url_privacy_policy" translatable="false">https://th3pl4gu3.wixsite.com/locky/terms-privacy-policy</string>
    <string name="app_url_developer_api" translatable="false">https://th3pl4gu3.wixsite.com/locky/developper</string>
    <string name="locky_section_main_account">Accounts</string>
    <string name="locky_section_main_card">Cards</string>
    <string name="locky_section_main_bank_account">Bank Accounts</string>
    <string name="locky_section_main_device">Devices</string>
    <string name="text_title_screen_donation">Donate</string>
    <string name="text_title_screen_splash">Welcome to Locky</string>
    <string name="text_subtitle_screen_splash">@string/app_description_short</string>
    <string name="text_title_sort">Sort</string>
    <string name="text_title_emptyView_logo_search">Search it. Love it. Keep it.</string>
    <string name="text_subtitle_emptyView_logo_search">Search a logo for your account</string>
    <string name="text_title_emptyView_item_search">Find your items!</string>
    <string name="text_subtitle_emptyView_item_search">Search for all your items here</string>
    <string name="text_title_emptyView_cards">Save your Card. Ease your Mind</string>
    <string name="text_subtitle_emptyView_cards">Save all your card details here.</string>
    <string name="text_title_emptyView_accounts">An Account a day, keeps Hackers away!</string>
    <string name="text_subtitle_emptyView_accounts">Save all your account details here.</string>
    <string name="text_title_emptyView_bank_accounts">Save your Bank Accounts</string>
    <string name="text_subtitle_emptyView_bank_accounts">Don\'t forget to save all your bank accounts.</string>
    <string name="text_title_emptyView_devices">Save your Devices</string>
    <string name="text_subtitle_emptyView_devices">Start inserting password for all your personal devices here</string>
    <string name="text_title_alert_delete">Delete "%1$s"</string>
    <string name="text_title_alert_delete_message">Are you sure you want to delete \'"%1$s"\'</string>
    <string name="text_title_alert_biometric">No biometric enrolments</string>
    <string name="text_title_alert_biometric_message">"You currently don't have any biometric entries. Do you want to add a biometric entry?     "</string>
    <string name="text_title_alert_backup">Backup Locky</string>
    <string name="text_title_alert_backup_message">Locky performs backup automatically on its users\' app data and settings preferences. If you don\'t have backup option enabled on your phone, please turn it on so that your app data and settings can be automatically backup on your Google Drive.</string>
    <string name="text_title_alert_data_wipe">Delete all data</string>
    <string name="text_message_alert_data_wipe">Are you sure you want to delete all your data ? (This includes all accounts, cards, devices and bank accounts inserted)</string>
    <string name="text_title_alert_biometric_enrolments_message">You no longer have biometric enrolments configured which was available upon activating the biometric authentication in Locky. Please re-configure your biometrics to be able to access Locky.</string>
    <string name="text_title_alert_biometric_authentication">Unlock to proceed</string>
    <string name="text_title_alert_biometric_authentication_message">Please authenticate yourself with your biometric credentials to access Locky</string>
    <string name="text_title_alert_intent_none">Unable to open "%1$s" app</string>
    <string name="text_message_alert_intent_none">There are no application installed to process this request. Please consider installing %1$s application to continue</string>
    <string name="text_title_alert_showPassword">Your password is</string>
    <string name="text_title_alert_showPin">Your pin is</string>
    <string name="text_subtitle_about_sections_app">About Locky</string>
    <string name="text_subtitle_about_sections_dev">Support &amp; Development</string>
    <string name="text_subtitle_about_sections_other">Other</string>
    <string name="text_title_about_dev_rate">Rate Locky</string>
    <string name="text_title_about_dev_donate">Donate</string>
    <string name="text_title_about_dev_bug">Report a Bug</string>
    <string name="text_title_about_dev_share">Share Locky</string>
    <string name="text_description_about_dev_rate">"If you love the app, let us know in the Google Play Store and we can make it even better"</string>
    <string name="text_description_about_dev_donate">If you think i deserve to get paid for my work, you can leave some money here</string>
    <string name="text_description_about_dev_bug">Any error that is persisting in the app, please send an email by clicking here</string>
    <string name="text_description_about_dev_share">Do not forget to share the app with your friends and family</string>
    <string name="text_title_about_other_license">Open Source Licenses</string>
    <string name="text_title_about_other_terms">Terms &amp; Privacy Policy</string>
    <string name="text_title_about_other_version">Version</string>
    <string name="text_title_about_other_developer">Developer API</string>
    <string name="text_description_about_other_developer">Application Program Interface (API) used in Locky</string>
    <string name="text_subtitle_about_buymea">Buy me a:</string>
    <string name="text_title_bank_account_logo_accent_screen">Choose a color</string>
    <string name="text_title_bank_account_logo_accent_current">Current</string>
    <string name="text_title_device_logo_customize_screen">Customize Logo</string>
    <string name="text_title_device_logo_customize_current">Current</string>
    <string name="text_title_master_password">Enter password to proceed</string>
    <string name="text_subtitle_master_password">Please authenticate yourself with your master password to access Locky</string>
    <string name="text_subtitle_screen_password_gen">Generate a password by choosing the criteria you want to include</string>
    <string name="menu_drawer_subtitle_others">OTHERS</string>
    <string name="menu_drawer_main_account">@string/locky_section_main_account</string>
    <string name="menu_drawer_main_card">@string/locky_section_main_card</string>
    <string name="menu_drawer_main_device">@string/locky_section_main_device</string>
    <string name="menu_drawer_main_password_generator">Password Generator</string>
    <string name="menu_drawer_main_settings">Settings</string>
    <string name="menu_drawer_main_about">About</string>
    <string name="menu_moreOptions_copyUsername">Copy Username</string>
    <string name="menu_moreOptions_copyEmail">Copy Email</string>
    <string name="menu_moreOptions_copyPassword">Copy Password</string>
    <string name="menu_moreOptions_copyNumber">Copy Number</string>
    <string name="menu_moreOptions_copyPin">Copy Pin</string>
    <string name="menu_moreOptions_copyIban">Copy Iban</string>
    <string name="menu_moreOptions_copySwift">Copy Swift</string>
    <string name="menu_moreOptions_copyBank">Copy Bank</string>
    <string name="menu_device_moreOptions_copyIp">Copy IP</string>
    <string name="menu_moreOptions_visitWebsite">Visit Website</string>
    <string name="menu_moreOptions_sharePass">Share Password</string>
    <string name="menu_moreOptions_delete">Delete</string>
    <string name="field_password_master">Master Password</string>
    <string name="field_account_sort_name">Entry Name</string>
    <string name="field_account_sort_username">@string/field_account_username</string>
    <string name="field_account_sort_email">@string/field_account_email</string>
    <string name="field_account_sort_website">@string/field_account_website</string>
    <string name="field_account_sort_authentication_type">@string/field_account_authentication_type</string>
    <string name="field_hint_password_generator">Your password will generate here</string>
    <string name="button_action_confirm">Confirm</string>
    <string name="button_action_copy_password">Copy Password</string>
    <string name="chips_action_lowercase">lowercase</string>
    <string name="chips_action_capital">capitals</string>
    <string name="chips_action_number">numbers</string>
    <string name="chips_action_dash">1 dash</string>
    <string name="chips_action_special_char_1">1 special character</string>
    <string name="settings_key_category_display" translatable="false">settings_key_category_display</string>
    <string name="settings_key_category_security" translatable="false">settings_key_category_security</string>
    <string name="settings_key_category_backup" translatable="false">settings_key_category_backup</string>
    <string name="settings_key_category_help" translatable="false">settings_key_category_help</string>
    <string name="settings_title_category_display">Display</string>
    <string name="settings_title_category_security">Security</string>
    <string name="settings_title_category_backup">Backup</string>
    <string name="settings_title_category_help">Help</string>
    <string name="settings_key_display_theme" translatable="false">settings_title_display_theme</string>
    <string name="settings_title_display_theme">App Theme</string>
    <string name="settings_key_security_biometric" translatable="false">settings_key_security_fingerprint</string>
    <string name="settings_title_security_biometric">Biometric Authentication</string>
    <string name="settings_key_backup_backup" translatable="false">settings_key_backup_backup</string>
    <string name="settings_title_backup_backup">Backup</string>
    <string name="settings_summary_backup_backup">Backup app data for Locky</string>
    <string name="settings_key_help_feedback" translatable="false">settings_key_help_feedback</string>
    <string name="settings_title_help_feedback">Send feedback</string>
    <string name="settings_summary_help_feedback">Report technical issues or suggest new features</string>
</resources>