<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Menu_CopyUsername"
        android:title="@string/menu_moreOptions_copyUsername"
        android:icon="@drawable/ic_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/Menu_CopyEmail"
        android:title="@string/menu_moreOptions_copyEmail"
        android:icon="@drawable/ic_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/Menu_CopyPass"
        android:title="@string/menu_moreOptions_copyPassword"
        android:icon="@drawable/ic_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/Menu_VisitSite"
        android:title="@string/menu_moreOptions_visitWebsite"
        android:icon="@drawable/ic_open_in_browser"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/Menu_Delete"
        android:title="@string/menu_moreOptions_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />
</menu>