<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout_Fragment_PasswordGenerator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOnSurface"
        android:padding="16dp">

        <!-- Screen Title & Subtitle -->
        <TextView
            android:id="@+id/Title_Screen"
            style="@style/Locky.Text.Title5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_drawer_main_password_generator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Subtitle_Screen"
            style="@style/Locky.Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_subtitle_screen_password_gen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/Title_Screen"
            app:layout_constraintTop_toBottomOf="@id/Title_Screen" />

        <!-- The Password Textbox -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextBox_Password"
            style="@style/Locky.TextBox.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/field_hint_password_generator"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Subtitle_Screen">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Chip group criterias -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/Chip_Group_Criteria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:chipSpacingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextBox_Password"
            app:singleLine="false"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Lowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chips_action_lowercase" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chips_action_capital" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chips_action_number" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Dash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chips_action_dash" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Specials_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chips_action_special_char_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Specials_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chips_action_special_char_2" />

        </com.google.android.material.chip.ChipGroup>

        <!-- Button to copy password -->
        <com.google.android.material.button.MaterialButton
            style="@style/Locky.Button.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_action_copy_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Chip_Group_Criteria"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>