<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="Sort"
            type="com.th3pl4gu3.locky_offline.core.tuning.AccountSort" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout_Filter_Account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/Sheet_Title_Sort"
            style="@style/Locky.Text.Title5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_title_sort"
            app:layout_constraintBottom_toTopOf="@id/Barrier_Title"
            app:layout_constraintEnd_toStartOf="@id/Barrier_Icon_Done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/Barrier_Icon_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:barrierDirection="start"
            app:constraint_referenced_ids="Button_Changes_Confirm" />

        <ImageButton
            android:id="@+id/Button_Changes_Confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/Sheet_Title_Sort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/Barrier_Icon_Done"
            app:layout_constraintTop_toTopOf="@+id/Sheet_Title_Sort"
            app:srcCompat="@drawable/ic_done" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/Barrier_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="Sheet_Title_Sort,Button_Changes_Confirm" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/Chip_Group_Sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Barrier_Title"
            app:selectionRequired="true"
            app:chipSpacingHorizontal="12dp"
            app:singleLine="false"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Sort_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{Sort.name}"
                android:text="@string/field_account_sort_name" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Sort_Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{Sort.username}"
                android:text="@string/field_account_sort_username" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Sort_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{Sort.email}"
                android:text="@string/field_account_sort_email" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Sort_Website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{Sort.website}"
                android:text="@string/field_account_sort_website" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Chip_Sort_AuthType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{Sort.authType}"
                android:text="@string/field_account_sort_authentication_type" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>